<resources>
    <string name="app_name">ColorMyViwes</string>
    <string name="one_box_text">One Box</string>
    <string name="two_box_text">Two Box</string>
    <string name="three_box_text">Three Box</string>
    <string name="four_box_text">Four Box</string>
    <string name="five_box_text">Five Box</string>
    <string name="how_to_play">How to play?</string>
    <string name="info">Click over the boxes and buttons and see the color changes</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="reset">Reset</string>
</resources>